# cjsrOS

./: .gitignore  README.md  build.sh  clean.sh
Documentation/: Design
Kernel/: boot.asm  build.sh  crti.asm  crtn.S  crtn.asm  linker.ld
Kernel/include/: hdd.h  idt.h  kernel.h  ports.h
Kernel/src/: hdd.c  idt.c  idtlst.asm  kernel.c  ports.asm
Libc/: CMakeLists.txt  config.h.in
Libc/include/: assert.h  limits.h  stdarg.h  stdbool.h  stdio.h  stdlib.h  string.h  unistd.h
Libc/include/sys/: cdefs.h  stat.h
Libc/src/stdio/: printf.c  putchar.c  puts.c
Libc/src/stdlib/: abort.c
